--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -21,17 +21,17 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "3.2.5",
-    "@sveltejs/kit": "2.6.3",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+    "@sveltejs/kit": "2.7.2",
+    "@sveltejs/vite-plugin-svelte": "4.0.0",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
-    "svelte": "5.0.0-next.262",
-    "svelte-check": "4.0.4",
-    "tslib": "2.7.0",
-    "vite": "5.4.8"
+    "svelte": "5.0.4",
+    "svelte-check": "4.0.5",
+    "tslib": "2.8.0",
+    "vite": "5.4.9"
   },
   "peerDependencies": {
-    "svelte": "5.0.0-next.262"
+    "svelte": "5.0.4"
   }
 }
