--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@aws-appsync/eslint-plugin": "1.10.1",
     "@eslint/js": "9.16.0",
     "@typescript-eslint/eslint-plugin": "8.18.0",
     "@typescript-eslint/parser": "8.18.0",
