--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@packages/ui-lib-svelte",
   "version": "0.0.0",
+  "sideEffects": [
+    "**/*.css"
+  ],
   "type": "module",
   "exports": {
     ".": {
       "types": "./src/index.ts",
-      "svelte": "./src/index.ts",
-      "default": "./src/index.ts"
+      "svelte": "./src/index.ts"
     }
   },
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "svelte-kit sync",
     "clean": "del .turbo coverage .svelte-kit",
@@ -28,7 +28,6 @@
     "@toolchain/vitest-config": "workspace:*",
     "svelte": "5.12.0",
     "svelte-check": "4.1.1",
-    "tslib": "2.8.1",
     "vite": "6.0.3"
   },
   "peerDependencies": {
