refactor(@apps/sveltekit-example-app): svelte5 upgrade cleanup

--- a/.github/workflows/monorepo-health.yml
+++ b/.github/workflows/monorepo-health.yml
@@ -16,3 +16,6 @@ jobs:
 
       - name: Run One Version check
         run: pnpm run one-version:check
+
+      - name: Test dedupe
+        run: pnpm dedupe --check
