--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "9.16.0",
     "@typescript-eslint/eslint-plugin": "8.18.0",
     "@typescript-eslint/parser": "8.18.0",
+    "@vitest/eslint-plugin": "1.1.16",
     "eslint": "9.16.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.7.0",
@@ -27,7 +28,6 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-svelte": "2.46.1",
     "eslint-plugin-unicorn": "56.0.1",
-    "eslint-plugin-vitest": "0.5.4",
     "globals": "15.13.0",
     "svelte-eslint-parser": "0.43.0"
   },
