--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -23,11 +23,13 @@
     "@sveltejs/adapter-auto": "3.3.1",
     "@sveltejs/kit": "2.12.2",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "@tailwindcss/vite": "4.0.0-beta.8",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "svelte": "5.14.4",
     "svelte-check": "4.1.1",
+    "tailwindcss": "4.0.0-beta.8",
     "vite": "6.0.4"
   },
   "peerDependencies": {
