--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
     "@tailwindcss/language-server": "0.0.27",
+    "@turbo/gen": "2.3.3",
     "del-cli": "6.0.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
