--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -10,7 +10,10 @@
     "./schema": "./src/schema/index.ts"
   },
   "scripts": {
+    "build": "pnpm run db:dbml",
     "clean": "del .turbo coverage",
+    "db:dbml": "node --import=tsx  ./src/generate-dbml.ts",
+    "db:dbml-render": "dbml-renderer -i schema.dbml -o schema.svg",
     "db:generate": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs generate",
     "db:migrate": "node --import=tsx ./src/migrate.ts",
     "db:push": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs push",
@@ -27,10 +30,12 @@
     "zod": "3.24.1"
   },
   "devDependencies": {
+    "@softwaretechnik/dbml-renderer": "1.0.30",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "@types/pg": "8.11.10",
+    "drizzle-dbml-generator": "0.10.0",
     "drizzle-kit": "0.30.1",
     "tsx": "4.19.2"
   }
