--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -11,12 +11,12 @@
   },
   "scripts": {
     "clean": "del .turbo coverage",
-    "db:dbml": "node --import=tsx  ./src/generate-dbml.ts",
-    "db:dbml-render": "dbml-renderer -i schema.dbml -o schema.svg",
     "db:generate": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs generate",
     "db:migrate": "node --import=tsx ./src/migrate.ts",
     "db:push": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs push",
     "db:studio": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs studio",
+    "dbml:generate": "node --import=tsx  ./src/generate-dbml.ts",
+    "dbml:render": "dbml-renderer -i schema.dbml -o schema.svg",
     "lint": "eslint .",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
