--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -15,6 +15,8 @@
     "db:migrate": "node --import=tsx ./src/migrate.ts",
     "db:push": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs push",
     "db:studio": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs studio",
+    "dbml:generate": "node --import=tsx  ./src/generate-dbml.ts",
+    "dbml:render": "dbml-renderer -i schema.dbml -o schema.svg",
     "lint": "eslint .",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
@@ -27,10 +29,12 @@
     "zod": "3.24.1"
   },
   "devDependencies": {
+    "@softwaretechnik/dbml-renderer": "1.0.30",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "@types/pg": "8.11.10",
+    "drizzle-dbml-generator": "0.10.0",
     "drizzle-kit": "0.30.1",
     "tsx": "4.19.2"
   }
