--- a/apps/hono-node-app/package.json
+++ b/apps/hono-node-app/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "@packages/api-hono",
+  "name": "@apps/hono-node-app",
   "version": "0.0.0",
   "private": true,
   "description": "",
   "license": "UNLICENSED",
   "type": "module",
-  "exports": {
-    ".": "./src/index.ts"
-  },
   "scripts": {
     "clean": "del .turbo coverage",
+    "dev": "tsx watch src/index.ts",
     "lint": "eslint .",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/swagger-ui": "0.5.0",
-    "@hono/zod-openapi": "0.18.3",
-    "@hono/zod-validator": "0.4.2",
-    "@scalar/hono-api-reference": "0.5.166",
-    "hono": "4.6.17",
-    "http-status-codes": "2.3.0",
+    "@hono/node-server": "1.13.7",
+    "@packages/api-hono": "workspace:*",
+    "dotenv": "16.4.7",
     "zod": "3.24.1"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
-    "@toolchain/vitest-config": "workspace:*"
+    "@toolchain/vitest-config": "workspace:*",
+    "tsx": "4.19.2"
   }
 }
