feat(packages/auth-lucia): remove oslo dependency
Oslo has been deprecated in favor of a
series of smaller focused libraries.

Replaced with @node-rs/argon2 as this is
what oslo was using under the covers.

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -16,7 +16,7 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "oslo": "1.2.1",
+    "@node-rs/argon2": "2.0.2",
     "pg": "8.13.1"
   },
   "devDependencies": {
