--- a/packages/auth-lucia/package.json
+++ b/packages/auth-lucia/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "1.1.0",
+    "@node-rs/argon2": "2.0.2",
     "@packages/db-drizzlepg": "workspace:*",
-    "lucia": "3.2.2",
-    "oslo": "1.2.1"
+    "lucia": "3.2.2"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
