--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,10 +17,10 @@
   },
   "dependencies": {
     "@hono/zod-validator": "0.4.2",
+    "@node-rs/argon2": "2.0.2",
     "@packages/auth-lucia": "workspace:*",
     "@packages/db-drizzlepg": "workspace:*",
     "hono": "4.6.20",
-    "oslo": "1.2.1",
     "zod": "3.24.1"
   },
   "devDependencies": {
