--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -29,6 +29,9 @@
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "http-status-codes": "2.3.0",
+    "rollup-plugin-bundle-stats": "4.18.2",
+    "rollup-plugin-visualizer": "5.14.0",
+    "rollup-plugin-webpack-stats": "2.0.1",
     "svelte": "5.19.6",
     "svelte-check": "4.1.4",
     "sveltekit-superforms": "2.23.1",
