--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -14,13 +14,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@eslint/js": "9.20.0",
-    "@typescript-eslint/eslint-plugin": "8.24.1",
-    "@typescript-eslint/parser": "8.24.1",
-    "@vitest/eslint-plugin": "1.1.31",
-    "eslint": "9.20.1",
+    "@eslint/js": "9.21.0",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/parser": "8.25.0",
+    "@vitest/eslint-plugin": "1.1.32-beta.3",
+    "eslint": "9.21.0",
     "eslint-config-prettier": "10.0.1",
-    "eslint-import-resolver-typescript": "3.8.2",
+    "eslint-import-resolver-typescript": "3.8.3",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-perfectionist": "4.9.0",
@@ -28,7 +28,7 @@
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-svelte": "2.46.1",
     "eslint-plugin-unicorn": "57.0.0",
-    "globals": "15.15.0",
+    "globals": "16.0.0",
     "svelte-eslint-parser": "0.43.0"
   },
   "devDependencies": {
