--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -17,9 +17,9 @@
     "@eslint/js": "9.21.0",
     "@typescript-eslint/eslint-plugin": "8.25.0",
     "@typescript-eslint/parser": "8.25.0",
-    "@vitest/eslint-plugin": "1.1.32-beta.3",
+    "@vitest/eslint-plugin": "1.1.35",
     "eslint": "9.21.0",
-    "eslint-config-prettier": "10.0.1",
+    "eslint-config-prettier": "10.0.2",
     "eslint-import-resolver-typescript": "3.8.3",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.31.0",
@@ -29,7 +29,7 @@
     "eslint-plugin-svelte": "2.46.1",
     "eslint-plugin-unicorn": "57.0.0",
     "globals": "16.0.0",
-    "svelte-eslint-parser": "0.43.0"
+    "svelte-eslint-parser": "1.0.0"
   },
   "devDependencies": {
     "@types/eslint": "9.6.1",
