--- a/toolchain/eslint-config-new/package.json
+++ b/toolchain/eslint-config-new/package.json
@@ -12,20 +12,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@eslint/js": "9.21.0",
     "@vitest/eslint-plugin": "1.1.36",
-    "eslint-config-prettier": "10.0.2",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "10.1.1",
     "eslint-import-resolver-typescript": "3.8.3",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-perfectionist": "4.9.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-unicorn": "57.0.0"
+    "eslint-plugin-unicorn": "57.0.0",
+    "typescript-eslint": "8.26.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.21.0",
-    "eslint": "9.21.0",
-    "globals": "16.0.0",
-    "typescript-eslint": "8.25.0"
+    "globals": "16.0.0"
   }
 }
