--- a/toolchain/eslint-config-new/package.json
+++ b/toolchain/eslint-config-new/package.json
@@ -5,7 +5,8 @@
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    "./profile/node": "./profile/node.js"
+    "./profile/node": "./profile/node.js",
+    "./profile/svelte": "./profile/svelte-profile.js"
   },
   "scripts": {
     "clean": "del .turbo",
@@ -22,6 +23,7 @@
     "eslint-plugin-perfectionist": "4.10.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-svelte": "3.1.0",
     "eslint-plugin-unicorn": "57.0.0",
     "typescript-eslint": "8.26.0"
   },
