--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "dotenv": "16.5.0",
-    "drizzle-orm": "1.0.0-beta.1-c0277c0",
+    "drizzle-orm": "0.44.1",
     "effect": "3.15.5",
     "pg": "8.16.0",
     "pg-error-enum": "1.0.2",
@@ -39,7 +39,7 @@
     "@toolchain/vitest-config": "workspace:*",
     "@types/pg": "8.15.2",
     "drizzle-dbml-generator": "0.10.0",
-    "drizzle-kit": "1.0.0-beta.1-c0277c0",
+    "drizzle-kit": "0.31.1",
     "tsx": "4.19.4"
   }
 }
