--- a/apps/sveltekit-example-app/tsconfig.json
+++ b/apps/sveltekit-example-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./.svelte-kit/tsconfig.json",
+  "extends": ["@toolchain/typescript-config/tsconfig-svelte.json", "./.svelte-kit/tsconfig.json"],
   "compilerOptions": {
     "types": ["vitest/globals"]
   }
