--- a/packages/api-impl/tsconfig.json
+++ b/packages/api-impl/tsconfig.json
@@ -1,11 +1,6 @@
 {
   "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
-    "types": ["vitest/globals"],
-    "plugins": [
-      {
-        "name": "@effect/language-service"
-      }
-    ]
+    "types": ["vitest/globals"]
   }
 }
