--- a/toolchain/typescript-config/tsconfig-node22.json
+++ b/toolchain/typescript-config/tsconfig-node22.json
@@ -14,7 +14,12 @@
 
     /* Modules */
     "module": "NodeNext",                             /* Specify what module code is generated. */
-    "moduleResolution": "NodeNext"                    /* Specify how TypeScript looks up a file from a given module specifier. */
+    "moduleResolution": "NodeNext",                   /* Specify how TypeScript looks up a file from a given module specifier. */
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ]
   },
   "include": ["${configDir}/src/**/*.ts"]
 }
