--- a/apps/effect-api-server/package.json
+++ b/apps/effect-api-server/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "clean": "del .turbo coverage",
-    "dev": "tsx --watch src/index.ts",
+    "dev": "tsx --env-file=.env --watch src/index.ts",
     "lint": "eslint ",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
@@ -15,7 +15,6 @@
   "dependencies": {
     "@effect/platform": "0.84.9",
     "@effect/platform-node": "0.85.14",
-    "@packages/api": "workspace:*",
     "@packages/api-impl": "workspace:*",
     "effect": "3.16.5"
   },
