--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -8,8 +8,7 @@
   "exports": {
     "./client": "./src/client/index.ts",
     "./schema": "./src/schema/index.ts",
-    "./helpers": "./src/helpers/index.ts",
-    "./effect-client": "./src/effect-client/index.ts"
+    "./helpers": "./src/helpers/index.ts"
   },
   "scripts": {
     "clean": "del .turbo coverage",
