--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -24,6 +24,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@effect/platform": "0.87.1",
+    "@effect/platform-node": "0.88.3",
     "dotenv": "16.5.0",
     "drizzle-orm": "0.44.2",
     "effect": "3.16.10",
