--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -27,13 +27,13 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
+    "effect": "3.16.10",
     "http-status-codes": "2.3.0",
     "mode-watcher": "1.1.0",
     "svelte": "5.34.9",
     "svelte-check": "4.2.2",
     "sveltekit-superforms": "2.27.1",
     "tailwindcss": "4.1.11",
-    "vite": "7.0.0",
-    "zod": "3.25.67"
+    "vite": "7.0.0"
   }
 }
