--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -31,8 +31,7 @@
     "effect": "3.16.10",
     "pg": "8.16.3",
     "pg-error-enum": "1.0.2",
-    "sql-formatter": "15.6.5",
-    "zod": "3.25.67"
+    "sql-formatter": "15.6.6"
   },
   "devDependencies": {
     "@softwaretechnik/dbml-renderer": "1.0.31",
