--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:17.4-alpine
+    image: postgres:17.5-alpine
     restart: unless-stopped
     environment:
       - POSTGRES_USER=postgres
@@ -22,7 +22,7 @@ services:
       - ./.docker/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   mailpit:
-    image: axllent/mailpit
+    image: axllent/mailpit:v1.27
     restart: unless-stopped
     environment:
       MP_MAX_MESSAGES: 5000
@@ -36,7 +36,7 @@ services:
       - ./.docker/data/mailpit-data:/data
 
   otel-lgtm:
-    image: grafana/otel-lgtm:latest
+    image: grafana/otel-lgtm:0.11.5
     restart: unless-stopped
     profiles:
       - otel-lgtm
@@ -51,7 +51,7 @@ services:
       - ./.docker/data/grafana-data:/data
 
   otel-jaeger:
-    image: jaegertracing/jaeger:2.7.0
+    image: jaegertracing/jaeger:2.8.0
     restart: unless-stopped
     profiles:
       - otel-jaeger
