--- a/packages/learn-effect-platform/package.json
+++ b/packages/learn-effect-platform/package.json
@@ -16,8 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@effect/opentelemetry": "0.53.14",
     "@effect/platform": "0.87.13",
     "@effect/platform-node": "0.89.6",
+    "@opentelemetry/sdk-trace-base": "2.0.1",
+    "@opentelemetry/sdk-trace-node": "2.0.1",
     "effect": "3.16.13"
   },
   "devDependencies": {
