--- a/apps/effect-api-server/package.json
+++ b/apps/effect-api-server/package.json
@@ -13,8 +13,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@effect/opentelemetry": "0.53.14",
     "@effect/platform": "0.87.13",
     "@effect/platform-node": "0.89.6",
+    "@opentelemetry/exporter-trace-otlp-http": "0.203.0",
+    "@opentelemetry/sdk-trace-base": "2.0.1",
+    "@opentelemetry/sdk-trace-node": "2.0.1",
     "@packages/api-impl": "workspace:*",
     "effect": "3.16.13"
   },
