--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-svelte": "3.10.1",
+    "eslint-plugin-turbo": "2.5.4",
     "eslint-plugin-unicorn": "59.0.1",
     "typescript-eslint": "8.37.0"
   },
