--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -20,6 +20,7 @@
     "pg": "8.16.3"
   },
   "devDependencies": {
+    "@packages/ui-lib-svelte": "workspace:*",
     "@sveltejs/adapter-node": "5.2.13",
     "@sveltejs/kit": "2.26.1",
     "@sveltejs/vite-plugin-svelte": "6.1.0",
