--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -20,6 +20,7 @@
     "pg": "8.16.3"
   },
   "devDependencies": {
+    "@lucide/svelte": "0.526.0",
     "@packages/ui-lib-svelte": "workspace:*",
     "@sveltejs/adapter-node": "5.2.13",
     "@sveltejs/kit": "2.26.1",
@@ -28,6 +29,7 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
+    "bits-ui": "2.8.13",
     "effect": "3.17.2",
     "http-status-codes": "2.3.0",
     "mode-watcher": "1.1.0",
