feat(apps/agentic-ai-example-app): change how to access env variables
Switch from using SvelteKit's $env/static/private
as this alters behavior differences when there
is and isn't the actual env vars defined in
 process.env or .env files.

--- a/apps/agentic-ai-example-app/turbo.json
+++ b/apps/agentic-ai-example-app/turbo.json
@@ -2,7 +2,8 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "outputs": [".svelte-kit/**"]
+      "outputs": [".svelte-kit/**"],
+      "env": ["OPENAI_API_KEY"]
     }
   }
 }
