--- a/apps/agentic-ai-example-app/package.json
+++ b/apps/agentic-ai-example-app/package.json
@@ -26,6 +26,7 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
+    "@types/node": "24.1.0",
     "ai": "5.0.0-beta.34",
     "svelte": "5.37.0",
     "svelte-check": "4.3.0",
