--- a/apps/ha-dashboard/package.json
+++ b/apps/ha-dashboard/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "description": "SvelteKit Example App",
   "type": "module",
-  "files": [
-    "build"
-  ],
   "scripts": {
     "build": "svelte-kit sync",
     "clean": "del .turbo coverage .svelte-kit build",
@@ -17,7 +14,7 @@
   },
   "devDependencies": {
     "@packages/api": "workspace:*",
-    "@sveltejs/adapter-static": "3.0.8",
+    "@sveltejs/adapter-auto": "6.0.1",
     "@sveltejs/kit": "2.27.0",
     "@sveltejs/vite-plugin-svelte": "6.1.0",
     "@tailwindcss/vite": "4.1.11",
