--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -20,8 +20,12 @@
     "test": "vitest run",
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
-  "devDependencies": {
+  "dependencies": {
     "@lucide/svelte": "0.539.0",
+    "bits-ui": "2.9.3",
+    "svelte-sonner": "1.0.5"
+  },
+  "devDependencies": {
     "@sveltejs/adapter-auto": "6.1.0",
     "@sveltejs/kit": "2.29.1",
     "@sveltejs/vite-plugin-svelte": "6.1.2",
@@ -29,12 +33,10 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
-    "bits-ui": "2.9.3",
     "clsx": "2.1.1",
     "mode-watcher": "1.1.0",
     "svelte": "5.38.1",
     "svelte-check": "4.3.1",
-    "svelte-sonner": "1.0.5",
     "tailwind-merge": "3.3.1",
     "tailwind-variants": "2.1.0",
     "tailwindcss": "4.1.11",
