--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -29,6 +29,7 @@
     "@sveltejs/adapter-auto": "6.1.0",
     "@sveltejs/kit": "2.34.1",
     "@sveltejs/vite-plugin-svelte": "6.1.3",
+    "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/vite": "4.1.12",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
