--- a/apps/agentic-ai-example-app/package.json
+++ b/apps/agentic-ai-example-app/package.json
@@ -27,6 +27,7 @@
     "ai": "5.0.27",
     "svelte": "5.38.6",
     "svelte-check": "4.3.1",
+    "svelte-sonner": "1.0.5",
     "tailwindcss": "4.1.12",
     "vite": "7.1.3",
     "zod": "3.25.76"
