--- a/apps/ha-dashboard/package.json
+++ b/apps/ha-dashboard/package.json
@@ -14,17 +14,18 @@
   },
   "devDependencies": {
     "@packages/api": "workspace:*",
+    "@packages/ui-lib-svelte": "workspace:*",
     "@sveltejs/adapter-auto": "6.1.0",
     "@sveltejs/kit": "2.37.0",
-    "@sveltejs/vite-plugin-svelte": "6.1.3",
-    "@tailwindcss/vite": "4.1.12",
+    "@sveltejs/vite-plugin-svelte": "6.1.4",
+    "@tailwindcss/vite": "4.1.13",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "home-assistant-js-websocket": "9.5.0",
-    "svelte": "5.38.6",
+    "svelte": "5.38.7",
     "svelte-check": "4.3.1",
-    "tailwindcss": "4.1.12",
+    "tailwindcss": "4.1.13",
     "vite": "7.1.4"
   }
 }
