--- a/packages/api-hono/package.json
+++ b/packages/api-hono/package.json
@@ -15,15 +15,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/zod-openapi": "0.19.10",
-    "@scalar/hono-api-reference": "0.9.21",
-    "hono": "4.9.11",
+    "@hono/zod-openapi": "1.1.4",
+    "@scalar/hono-api-reference": "0.9.24",
+    "hono": "4.10.4",
     "http-status-codes": "2.3.0",
     "zod": "3.25.76"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
-    "@toolchain/vitest-config": "workspace:*"
+    "@toolchain/vitest-config": "workspace:*",
+    "@types/node": "24.10.0"
   }
 }
