--- a/packages/api-hono/tsconfig.json
+++ b/packages/api-hono/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals", "node"]
   }
 }
