--- a/apps/effect-api-server/package.json
+++ b/apps/effect-api-server/package.json
@@ -5,6 +5,9 @@
   "description": "Effect Node API Server",
   "license": "UNLICENSED",
   "type": "module",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "clean": "del .turbo coverage",
     "dev": "tsx --env-file=.env --watch src/index.ts",
@@ -26,6 +29,7 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
-    "tsx": "4.21.0"
+    "tsx": "4.21.0",
+    "vite": "7.2.7"
   }
 }
