--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -13,9 +13,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@eslint/js": "9.39.2",
+    "@eslint/js": "10.0.1",
     "@vitest/eslint-plugin": "1.6.6",
-    "eslint": "9.39.2",
+    "eslint": "10.0.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -29,6 +29,7 @@
     "typescript-eslint": "8.54.0"
   },
   "devDependencies": {
+    "@eslint/compat": "2.0.2",
     "globals": "17.3.0"
   }
 }
