--- a/apps/ha-dashboard/package.json
+++ b/apps/ha-dashboard/package.json
@@ -22,10 +22,12 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
+    "@types/ws": "8.18.1",
     "home-assistant-js-websocket": "9.6.0",
-    "svelte": "5.50.0",
+    "svelte": "5.50.1",
     "svelte-check": "4.3.6",
     "tailwindcss": "4.1.18",
-    "vite": "7.3.1"
+    "vite": "7.3.1",
+    "ws": "8.19.0"
   }
 }
